# ecuafast

./: CMakeLists.txt  ecuafast.cpp  main.c
src/: main.cpp
src/common/: constants.hpp  socket_wrapper.hpp  types.hpp  utils.hpp
src/entities/: senae_server.cpp  senae_server.hpp  sri_server.cpp  sri_server.hpp  supercia_server.cpp  supercia_server.hpp
src/port/: port_manager.cpp  port_manager.hpp
src/ship/: ship_client.cpp  ship_client.hpp
